@@ -25,7 +25,7 @@
 #include <libs/Module.h>
 
 static char const rcsid[] =
-  "$Id: readconfig.c,v 1.38.2.2 2002/06/11 01:01:12 migo Exp $";
+  "$Id: readconfig.c,v 1.38.2.3 2003/01/24 13:58:15 domivogt Exp $";
 
 /************************************************************************
  *
@@ -1395,11 +1395,11 @@ void read_in_resources (char *file)
 	ConsoleDebug (CONFIG, "Setting followfocus to: %d\n", i);
 	SET_MANAGER (manager, followFocus, i);
       }
-      else if (!strcasecmp (option1, "showonlyiconic")) {
+      else if (!strcasecmp (option1, "showonlyicons")) {
        p = read_next_cmd (READ_ARG);
        if (!p) {
          ConsoleMessage ("Bad line: %s\n", current_line);
-         ConsoleMessage ("Need argument to showonlyiconic\n");
+         ConsoleMessage ("Need argument to showonlyicons\n");
          continue;
        }
        if (!strcasecmp (p, "true")) {
@@ -1413,7 +1413,7 @@ void read_in_resources (char *file)
          ConsoleMessage ("What is this: %s?\n", p);
          continue;
        }
-       ConsoleDebug (CONFIG, "Setting showonlyiconic to: %d\n", i);
+       ConsoleDebug (CONFIG, "Setting showonlyicons to: %d\n", i);
        SET_MANAGER (manager, showonlyiconic, i);
       }
       else if (!strcasecmp (option1, "font")) {
