@@ -1,3 +1,8 @@
+2003-01-24  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmIconMan/readconfig.c (read_in_resources):
+	fixed ShowOnlyIcons option
+
 2003-01-20  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmAuto/FvwmAuto.c (main):
